# tinyml-drone-vibration-detector

./: Classificador_Vibracao_Drone_TinyML (1).html  README.md
dataset/: anomalo1.xlsx  anomalo2.xlsx  normal.xlsx
drone_fault_detector/: CMakeLists.txt  drone_fault_detector.cpp  drone_fault_model.cc  drone_fault_model.h
model/: drone_fault_int8 (4).tflite  drone_fault_model (2).cc  drone_fault_quant.tflite
notebook/: Classificador_Vibracao_Drone_TinyML (1).ipynb
